# ipod-sharp

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  ipod-sharp-ui.pc.in  ipod-sharp.mdp  ipod-sharp.mds  ipod-sharp.pc.in  ipod-sharp.snk  shamrock.m4
docs/: Makefile  Makefile.am  Makefile.in  ipod-sharp-docs.source  ipod-sharp-docs.tree
docs/en/: IPod.xml  index.xml
docs/en/IPod/: Album.xml  ArtworkFormat.xml  ArtworkUsage.xml  DatabaseReadException.xml  DatabaseWriteException.xml  Device.xml  DeviceArgs.xml  DeviceBusyException.xml  DeviceException.xml  DeviceGeneration.xml  DeviceHandler.xml  DeviceManager.xml  DeviceModel.xml  DistanceUnit.xml  Equalizer.xml  Hash58.xml  InsufficientSpaceException.xml  MediaType.xml  ModelInfo.xml  Photo.xml  PhotoDatabase.xml  PhotoSaveProgressArgs.xml  PhotoSaveProgressHandler.xml  PixelFormat.xml  Playlist.xml  PlaylistHandler.xml  PlaylistTrackHandler.xml  ProductionInfo.xml  SportKit.xml  SportKitManager.xml  Thumbnail.xml  Track.xml  TrackDatabase.xml  TrackHandler.xml  TrackRating.xml  TrackSaveProgressArgs.xml  TrackSaveProgressHandler.xml  VolumeInfo.xml  Workout.xml
src/: Album.cs  ArtworkFormat.cs  AssemblyInfo.cs  Capacities.cs  DatabaseReadException.cs  DatabaseWriteException.cs  Device.cs  DeviceAddedHandler.cs  DeviceBusyException.cs  DeviceEventListener.cs  DeviceException.cs  DeviceGeneration.cs  DeviceManager.cs  DeviceModel.cs  DeviceRemovedHandler.cs  EndianBinaryWriter.cs  Equalizer.cs  Hash58.cs  IDevice.cs  Image.cs  Initializer.cs  Makefile.am  ModelInfo.cs  ObjectDumper.cs  Photo.cs  PhotoDatabase.cs  Playlist.cs  ProductionInfo.cs  ShuffleSongDatabase.cs  ShuffleTrackDatabase.cs  Song.cs  SongDatabase.cs  SportKitManager.cs  SysInfo.cs  SysInfoExtended.cs  Thumbnail.cs  Track.cs  TrackDatabase.cs  Utility.cs  VolumeInfo.cs  (+4 more)
src/Firmware/: CpioArchive.cs  DmgFirmwareExtract.cs  DmgImage.cs  DmgPartition.cs  Makefile.am
src/Hal/: Device.cs  HalDevice.cs  HalDeviceManager.cs  Manager.cs  Volume.cs
src/Unix/: Device.cs  DeviceAddedHandler.cs  DeviceEventListener.cs  DeviceRemovedHandler.cs  Initializer.cs
src/Win32/: Device.cs  DeviceEventListener.cs  DeviceWatcherWindow.cs  WinAPI.cs
src/en/: IPod.xml  index.xml
src/en/IPod/: ArtworkFormat.xml  ArtworkType.xml  DatabaseReadException.xml  DatabaseWriteException.xml  Device.xml  DeviceAddedArgs.xml  DeviceAddedHandler.xml  DeviceBusyException.xml  DeviceEventListener.xml  DeviceException.xml  DeviceGeneration.xml  DeviceModel.xml  DeviceRemovedArgs.xml  DeviceRemovedHandler.xml  Equalizer.xml  Initializer.xml  InsufficientSpaceException.xml  Playlist.xml  PlaylistHandler.xml  PlaylistSongHandler.xml  SaveProgressArgs.xml  SaveProgressHandler.xml  Song.xml  SongDatabase.xml  SongRating.xml  StatusHandler.xml
tests/: DatabaseTests.cs  HashTests.cs  IPodTests.cs  Makefile.am  mktest.sh  runtests.sh
tools/: DmgIsoExtract.cs  ExtractFirmware.cs  Hash58.cs  IpodDataSubmit.cs  Makefile.am  PhotoAdder.cs  PodTool.cs  VideoAdder.cs
ui/: ArtworkHelpers.cs  AssemblyInfo.cs  DeviceCombo.cs  Makefile.am  ProgressDialog.cs
